feature: rename data processing to service chain, infrastructure service to service and serviceOffering in the chain into service
