# docs/swagger.json
@@ -412,7 +412,7 @@
                     "description": "email to reattach the user",
                     "type": "string"
                   },
-                  "dataProcessingId": {
+                  "serviceChainId": {
                     "description": "selected data processing",
                     "type": "string"
                   },
@@ -954,7 +954,7 @@
                     "description": "which data is needed",
                     "type": "string"
                   },
-                  "infrastructureService": {
+                  "service": {
                     "description": "the infrastructure service url.",
                     "type": "string"
                   },
@@ -1078,7 +1078,7 @@
                     "description": "which data is needed",
                     "type": "string"
                   },
-                  "infrastructureService": {
+                  "service": {
                     "description": "the infrastructure service of the infrastructure configuration.",
                     "type": "string"
                   },
@@ -1654,7 +1654,7 @@
                     "required": false,
                     "example": "https://catalog.api.com/v1/catalog/serviceofferings/id"
                   },
-                  "dataProcessingId": {
+                  "serviceChainId": {
                     "description": "id of the selected data processing chains in the contract",
                     "type": "string",
                     "required": false,
@@ -1866,6 +1866,95 @@
         }
       }
     },
+    "/exchange": {
+      "post": {
+        "summary": "Trigger data exchange between two connector",
+        "tags": [
+          "Exchange"
+        ],
+        "security": [
+          {
+            "jwt": []
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "requestBody": {
+          "200": {
+            "description": "Successful response"
+          },
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "contract": {
+                    "description": "Contract self-description",
+                    "type": "string",
+                    "required": true,
+                    "example": "https://contract.com/contracts/id"
+                  },
+                  "purposeId": {
+                    "description": "consumer service offering URI",
+                    "type": "string",
+                    "required": false,
+                    "example": "https://catalog.api.com/v1/catalog/serviceofferings/id"
+                  },
+                  "resourceId": {
+                    "description": "provider service offering URI",
+                    "type": "string",
+                    "required": false,
+                    "example": "https://catalog.api.com/v1/catalog/serviceofferings/id"
+                  },
+                  "serviceChainId": {
+                    "description": "id of the selected data processing chains in the contract",
+                    "type": "string",
+                    "required": false,
+                    "example": "670e8eb6b439a2379f290fc6"
+                  },
+                  "resources": {
+                    "description": "array of provider data resource URI",
+                    "type": "array",
+                    "required": false,
+                    "example": [
+                      {
+                        "resource": "https://catalog.api.com/v1/catalog/dataresources/id",
+                        "params": {
+                          "query": [
+                            {
+                              "page": 0
+                            },
+                            {
+                              "limit": 10
+                            }
+                          ]
+                        }
+                      }
+                    ]
+                  },
+                  "providerParams": {
+                    "description": "object of query params",
+                    "type": "object",
+                    "required": false,
+                    "example": {
+                      "query": [
+                        {
+                          "page": 0
+                        },
+                        {
+                          "limit": 10
+                        }
+                      ]
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/provider/export": {
       "post": {
         "summary": "Provider exchange webhook",
@@ -2058,7 +2147,7 @@
             "type": "string",
             "description": "the data of the infrastructure configuration."
           },
-          "infrastructureService": {
+          "service": {
             "type": "string",
             "description": "the infrastructure service of the infrastructure configuration."
           }
@@ -2170,6 +2259,10 @@
     {
       "name": "Self-Description",
       "description": "Self Description of a data space connector"
+    },
+    {
+      "name": "Exchange",
+      "description": "Exchange trigger endpoint"
     },
     {
       "name": "Provider",
